xxxx-xx-xx: 0.2.0
=================

* Added Calendar.fullyear(), converts 2-digit years to 4 digits

2010-01-24: 0.1.0
=================

* Initial release